infra/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gh-be # ingress에서 사용하는 이름
  namespace: githubble
spec:
  selector:
    app: be-app
    # 이 라벨을 가진 pod들에게 트래픽을 전송한다.
    # deployment의 label과 연결됨
  ports:
    - port: 80
      targetPort: 8080
